--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@ function show(slot) {
                     </div>
                     <div class="card-body">
                         <span class="mats"><strong>Ressources :</strong><br>${item.mats}</span>
-                        <a href="${item.url}" target="_blank" class="db-link" onclick="event.stopPropagation()">Examiner l'objet ↗</a>
+                        <a href="${item.url}" target="_blank" class="db-link" onclick="event.stopPropagation()">Lien vers DB Turtle WoW ↗</a>
                     </div>
                 </div>
             `;
@@ -354,3 +354,4 @@ function getBadgeColor(p) {
 </script>
 </body>
 </html>
+
