--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
 <script>
 const database = {
   "head": [
-    { "prof": "Quête", "name": "Libram +100 PV", "url": "https://database.turtlecraft.gg/?item=11642", "mats": "Quest" },
     { "prof": "Enchantement", "name": "Enchant ZG", "url": "https://database.turtlecraft.gg/?item=22637", "mats": "Zul'Gurub (Primal Hakkari Idol + Class Doll)" },
+    { "prof": "Quête", "name": "Libram +100 PV", "url": "https://database.turtlecraft.gg/?item=11642", "mats": "Quest" },
     { "prof": "Quête", "name": "Libram +12 Healing & Spell damage", "url": "https://database.turtlecraft.gg/?item=18330", "mats": "Quest" },
     { "prof": "Quête", "name": "Libram +8 agi", "url": "https://database.turtlecraft.gg/?item=11647", "mats": "Quest" },
     { "prof": "Quête", "name": "Libram +8 force", "url": "https://database.turtlecraft.gg/?item=11645", "mats": "Quest" }
@@ -273,6 +273,7 @@ const database = {
     { "prof": "Forge", "name": "Belt Buckle +8 Heal Power", "url": "https://database.turtlecraft.gg/?item=151", "mats": "8x Truesilver Bar - 1x Iron Buckle - 2x Solid Grinding Stone" }
   ],
   "legs": [
+    { "prof": "Enchantement", "name": "Enchant ZG", "url": "https://database.turtlecraft.gg/?item=22637", "mats": "Zul'Gurub (Primal Hakkari Idol + Class Doll)" },
     { "prof": "Travail du Cuir", "name": "Enchanted Armor Kit (+9 HP/SP)", "url": "https://database.turtlecraft.gg/?item=61183", "mats": "3x Enchanted Leather - 3x Arcane Essence - 2x Rune Thread" },
     { "prof": "Quête", "name": "Libram +100 PV", "url": "https://database.turtlecraft.gg/?item=11642", "mats": "Quest" },
     { "prof": "Quête", "name": "Libram +12 Healing & Spell damage", "url": "https://database.turtlecraft.gg/?item=18330", "mats": "Quest" },
@@ -354,4 +355,5 @@ function getBadgeColor(p) {
 </script>
 </body>
 </html>
+
 
