--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
 <script>
 const database = {
   "head": [
+    { "prof": "Quête", "name": "Gift of Ferocity (Drood Only)", "url": "https://database.turtlecraft.gg/?item=61081", "mats": "Quest Moonglade - 3x Bright Dream Shard" },
     { "prof": "Enchantement", "name": "Enchant ZG", "url": "https://database.turtlecraft.gg/?item=22637", "mats": "Zul'Gurub (Primal Hakkari Idol + Class Doll)" },
     { "prof": "Quête", "name": "Libram +100 PV", "url": "https://database.turtlecraft.gg/?item=11642", "mats": "Quest" },
     { "prof": "Quête", "name": "Libram +12 Healing & Spell damage", "url": "https://database.turtlecraft.gg/?item=18330", "mats": "Quest" },
@@ -355,5 +356,6 @@ function getBadgeColor(p) {
 </script>
 </body>
 </html>
+
 
 
