--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ const database = {
     { "prof": "Quête", "name": "Gift of Ferocity (Drood Only)", "url": "https://database.turtlecraft.gg/?item=61081", "mats": "Quest Moonglade - 3x Bright Dream Shard" },
     { "prof": "Drop", "name": "Enchant ZG", "url": "https://database.turtlecraft.gg/?item=22637", "mats": "Zul'Gurub (Primal Hakkari Idol + Class Doll)" },
     { "prof": "Quête", "name": "Libram +100 PV", "url": "https://database.turtlecraft.gg/?item=11642", "mats": "Quest" },
-    { "prof": "Quête", "name": "Libram +12 Healing & Spell damage", "url": "https://database.turtlecraft.gg/?item=18330", "mats": "Quest" },
+    { "prof": "Quête", "name": "Libram +12  & Spell damage", "url": "https://database.turtlecraft.gg/?item=18330", "mats": "Quest" },
     { "prof": "Quête", "name": "Libram +8 agi", "url": "https://database.turtlecraft.gg/?item=11647", "mats": "Quest" },
     { "prof": "Quête", "name": "Libram +8 force", "url": "https://database.turtlecraft.gg/?item=11645", "mats": "Quest" }
   ],
@@ -249,7 +249,7 @@ const database = {
     { "prof": "Enchantement", "name": "Enchant +12 Spell Power", "url": "https://database.turtlecraft.gg/?item=60966", "mats": "2x Large Brilliant Shard - 10x Illusion Dust - 3x Essence of Earth - 3x Essence of Air" },
     { "prof": "Enchantement", "name": "Enchant +7 Agility", "url": "https://database.turtlecraft.gg/?item=60969", "mats": "3x Large Brilliant Shard - 1x Greater Eternal Essence - 2x Essence of Air - 2x Essence of Earth" },
     { "prof": "Enchantement", "name": "Enchant +9 Strength", "url": "https://database.turtlecraft.gg/?item=16246", "mats": "6x Illusion Dust - 6x Greater Eternal Essence" },
-    { "prof": "Enchantement", "name": "Enchant +24 Healing Power", "url": "https://database.turtlecraft.gg/?item=19447", "mats": "2x Large Brilliant Shard - 20x Illusion Dust - 4x Greater Eternal Essence - 1x Living Essence" },
+    { "prof": "Enchantement", "name": "Enchant +24 Healing Power", "url": "https://database.turtlecraft.gg/?item=19447", "mats": "2x Large Brilliant Shard - 20x Illusion Dust - 4x Greater Eternal Essence - 6x Living Essence" },
     { "prof": "Enchantement", "name": "Enchant +4 Mp5", "url": "https://database.turtlecraft.gg/?item=19446", "mats": "16x Illusion Dust - 4x Greater Eternal Essence - 2x Essence of Water" }
   ],
   "hands": [
@@ -356,6 +356,7 @@ function getBadgeColor(p) {
 </script>
 </body>
 </html>
+
 
 
 
