--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 <body>
 
 <div class="main-container">
-    <h1>Unskill (Fr) - Turtle WoW - Tel'Abim (Horde)</h1>
+    <h1>Turtle WoW - Tel'Abim (Horde)</h1>
     
     <div class="char-sheet">
         <div class="grid">
@@ -356,6 +356,7 @@ function getBadgeColor(p) {
 </script>
 </body>
 </html>
+
 
 
 
